updated gh-pages name

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
   },
-  "homepage": "https://ijbenton.github.io/calculator",
+  "homepage": "https://ijbenton.github.io/calculator-react",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
